--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
+    "final-form": "^4.20.1",
     "history": "^4.9.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
@@ -58,6 +59,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.8.6",
+    "react-final-form": "^6.5.2",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.1",
