--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     "react-dom": "^16.8.6",
     "react-final-form": "^6.5.2",
     "react-redux": "^7.0.1",
+    "react-redux-promise-listener": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-promise-listener": "^1.1.1",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.3.1",
     "socket.io": "^2.2.0"
